# 2025-ml-term-project

./: README.md  pyproject.toml  run_all.sh
script/: run_artist_vec.sh  run_build_features.sh  run_dump_candidates.sh  run_eval_sweep.sh  run_infer.sh  run_join.sh  run_make_rerank_dataset.sh  run_rerank_infer.sh  run_train.sh  run_train_als.sh  run_train_reranker.sh
src/: ML_final.ipynb  build_artist_vectors.py  build_user_item_features.py  dump_candidates_from_als.py  eval_topk_csv.py  join_lastfm_spotify.py  make_rerank_dataset.py  predict_user.py  rerank_infer.py  train_implicit_als.py  train_reranker_lgbm.py
