[project]
name = "ml-term-project"
version = "0.1.0"
description = "Last.fm CF + Spotify content hybrid recommender (Dev1 pipeline)"
authors = [
    {name = "Jaeuk Han",email = "jaeuk0228@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-rapidjson (>=1.22,<2.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "cython (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
jupyter = "^1.1.1"
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.2"
mypy = "^1.18.2"
types-pyyaml = "^6.0.12.20250915"

